[package]
name = "unkey"
description = "An asynchronous Rust SDK for the Unkey API."
version = "0.5.0"
edition = "2021"
authors = ["Jonxslays"]
readme = "README.md"
license = "MIT"
rust-version = "1.63.0"
homepage = "https://github.com/Jonxslays/unkey"
repository = "https://github.com/Jonxslays/unkey"
documentation = "https://docs.rs/unkey"
keywords = ["unkey-sdk", "unkey", "unkeyed", "api"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "unkey"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.reqwest]
version = "0.11"
features = ["json", "rustls-tls"]
default-features = false
